buttons aligned correctly

--- a/Front-end/become-billionaire/src/app/host-setting/host-setting.component.css
+++ b/Front-end/become-billionaire/src/app/host-setting/host-setting.component.css
@@ -70,7 +70,7 @@ h3{
     border-radius: 0.3vw;
     font-size: 1.8vw;
     font-size: max(30px);
-    padding: 2% 2% 2% 2%;
+    padding: 2% 0% 2% 0%;
     border-style: none;
     margin-left: 1%;
     margin-right: 1%;
@@ -187,7 +187,7 @@ h3{
 } 
 
 .btnBox {
-    width: auto;
+    width: 45vw;
     flex-wrap: wrap;
     border-style: none;
     overflow-y: scroll; 
